--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 
 
-<div style="position: absolute; top: 80.4vh; left: 27vw; z-index: 9999;">
+<div style="position: absolute; top: 79.4vh; left: 27vw; z-index: 9999;">
   <img src="https://firebasestorage.googleapis.com/v0/b/xsun-b171d.appspot.com/o/immutable-x-imx-glass-crypto-coin-3d-illustration-free-png.png?alt=media&token=5cf5a220-fed2-41b8-a1fe-035e0e3c9a6e" alt="icon" width="39vw" height="39vw">
 </div>
 
@@ -353,7 +353,7 @@
 
   
   
- <button id="withdrawButton" disabled onclick="withdrawAmount()" class="disabled" style="color: white; position: absolute; top: 88.3%; left: 13%; transform: translate(-50%, -50%); z-index: 9999; padding: 2vw 3vw; border: none; border-radius: 1vw; background-color: lightslategray;">Withdraw<span id="withdrawMessage" style="display: none;"></span></button>
+ <button id="withdrawButton" disabled onclick="withdrawAmount()" class="disabled" style="color: white; position: absolute; top: 87.3%; left: 13%; transform: translate(-50%, -50%); z-index: 9999; padding: 2vw 3vw; border: none; border-radius: 1vw; background-color: lightslategray;">Withdraw<span id="withdrawMessage" style="display: none;"></span></button>
 
   
   
@@ -401,7 +401,8 @@
 
 
     <!-- Button to show/hide sidebar -->
-    <div class="menu-button" onclick="toggleSidebar()" style= "margin-left: 3vw; margin-top: 4vw; background-color: black; border-radius: 5vw; border: red;">&#9776;</div>
+   <div class="menu-button" onclick="toggleSidebar()" style="margin-left: 3vw; margin-top: 4vw; background-color: black; border-radius: 5vw; border: 0.2vw solid #333;">&#9776;</div>
+
     
 
 
