--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </div>
   </div>
   
-  <div onclick="copyContract()" style="cursor: pointer; color: black; position: absolute; top: 88.1%; z-index: 9999; right: 5%; font-size: 2.5vw; background-color: white; color: black; padding: 10px; border: 1px solid black; border-radius: 5px; display: flex; align-items: center;">
+  <div onclick="copyContract()" style="cursor: pointer; color: black; position: absolute; top: 87.7%; z-index: 9999; right: 5%; font-size: 2.5vw; background-color: white; color: black; padding: 10px; border: 1px solid black; border-radius: 5px; display: flex; align-items: center;">
   <span style="margin-right: 10px;">Contract adresse bsc20:</span>
   <textarea id="contractAddress" readonly style="flex: 1; border: none; background-color: transparent; font-size: 1vw;">0xEf06e2D9C18680316E63944be3d881093Aa8d542</textarea>
 </div>
@@ -227,7 +227,7 @@
   
   
   
-<p id="totalMiningCount" style="color: black; position: absolute; top: 14%; z-index: 9999; right: 3%; font-size: 2vw; background-color: white; color: black;">~ 𝚃𝚘𝚝𝚊𝚕 𝚇𝚜𝚞𝚗 𝙼𝚒𝚗𝚎𝚍 ~
+<p id="totalMiningCount" style="color: black; position: absolute; top: 26.2%; z-index: 9999; left: 2%; font-size: 2vw; background-color: white; color: black;">~ 𝚃𝚘𝚝𝚊𝚕 𝚇𝚜𝚞𝚗 𝙼𝚒𝚗𝚎𝚍 ~
 :<span id="minedCoinsTotal"></span></p>
 
 
@@ -236,7 +236,7 @@
 
 
   
-<p style="color: black; position: absolute; top: 20.7%; z-index: 9999; left: 2%; font-size: 2vw; background-color: red; color: whitesmoke;">✨️~ 𝚇𝚂𝚄𝙽 𝚃𝙾𝙺𝙴𝙽 𝙲𝚁𝚈𝙿𝚃𝙾 𝙳𝙸𝙶𝙸𝚃𝙰𝙻~✨️
+<p style="color: black; position: absolute; top: 15.7%; z-index: 9999; left: 2%; font-size: 2vw; background-color: red; color: whitesmoke;">✨️~ 𝚇𝚂𝚄𝙽 𝚃𝙾𝙺𝙴𝙽 𝙲𝚁𝚈𝙿𝚃𝙾 𝙳𝙸𝙶𝙸𝚃𝙰𝙻~✨️
 
 
 
@@ -250,7 +250,7 @@
 
 
 
-<p style="color: black; position: absolute; top: 26.2%; z-index: 9999; left: 2%; font-size: 1.8vw; background-color: seagreen;">⚙ NETWORK NEAR BLOCKCHAIN-BSC20⚙</p>
+<p style="color: black; position: absolute; top: 21%; z-index: 9999; left: 2%; font-size: 1.8vw; background-color: seagreen;">⚙ NETWORK NEAR BLOCKCHAIN-BSC20-⚙</p>
 
 
 
