--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
   Total Balance
 </span>
     
-<span id="total-balance" style="font-size: 8vw; color: #32CD32; position: absolute; top: 0; right: 0; margin: 2vw; z-index: 1000; font-weight: bolder">
+<span id="total-balance" style="font-size: 8vw; color: #32CD32; position: absolute; top: 4vw; right: 0; margin: 2vw; z-index: 1000; font-weight: bolder">
    $0.00
 </span>
 
