--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
   <a href="#" onclick="showInviteFriends()">Referral</a>
   <a href="#" onclick="showRoadmap()">Roadmap</a>
   <a href="#" onclick="showKyc()">kyc</a>
-  <a id="telegramLink" href="https://xsunapp.github.io/xsun-app.uni.ch/">Site</a>
+  <a id="telegramLink" href="https://www.xsun.pro/">Site</a>
   <br>
 
   <button id="signOutButton" style="margin-left: 15px;">Sign Out</button>
